<resources>
    <string name="app_name">Crypto Currency</string>
    <string name="str_hello_world">Hello World!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="exchange">Exchange</string>
    <string name="home">Home</string>
    <string name="top">Top:</string>
    <string name="show">Show:</string>
    <string name="change">Change</string>
    <string name="price">Price</string>
    <string name="name">Name</string>
    <string name="rank">Rank</string>
    <string name="rank1">#1</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="detail">Detail</string>
    <string name="btc">BTC</string>
    <string name="description">Description</string>
    <string name="markets_cap">Markets Cap:</string>
    <string name="loading">Loading...</string>
    <string name="website_url">Website URL:</string>
    <string name="btc_price">BTC Price:</string>
    <string name="num_market">Number of Markets:</string>
    <string name="num_exchange">Number of Exchange:</string>
    <string name="_24h_volume">24h Volume:</string>
    <string name="favorite">Favorite</string>
    <string name="sort">Sort:</string>
    <string name="value">Value</string>
    <string name="result">Result</string>
    <string name="search_hint">Search...</string>
    <string name="asset">Asset</string>
    <string name="add">Add</string>
    <string name="add_asset">Add Asset</string>
    <string name="my_asset">My Asset</string>
    <string name="current_balance">Current Balance:</string>
    <string name="win_loss">Win/Loss:</string>
    <string name="my_wallet">My Wallet:</string>
    <string name="reload">Reload</string>
    <string-array name="coin_catalogs">
        <item>marketCap</item>
        <item>price</item>
        <item>change</item>
        <item>24hVolume</item>
    </string-array>
    <string-array name="coin_limits">
        <item>10</item>
        <item>20</item>
        <item>50</item>
        <item>70</item>
        <item>100</item>
    </string-array>
</resources>
