<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border_top">
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/color_transparent"
        android:gravity="center_vertical">
        <TextView
            android:id="@+id/txtRank"
            android:layout_width="@dimen/dimen_50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_4dp"
            android:text="@string/rank1"
            android:textColor="@color/color_white"
            android:textStyle="bold" />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/icCoin"
                android:layout_width="@dimen/dimen_30dp"
                android:layout_height="@dimen/dimen_30dp"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />
            <TextView
                android:id="@+id/txtName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_10dp"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:text="@string/name"
                android:textStyle="bold"
                android:singleLine="true"
                android:textColor="@color/color_white"
                app:layout_constraintStart_toEndOf="@id/icCoin"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:id="@+id/txtSymbol"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_10dp"
                android:layout_marginTop="@dimen/dimen_4dp"
                android:text="@string/name"
                android:textColor="@color/color_white"
                app:layout_constraintStart_toEndOf="@id/icCoin"
                app:layout_constraintTop_toBottomOf="@id/txtName" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView
            android:id="@+id/txtPrice"
            android:layout_width="@dimen/dimen_80dp"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textColor="@color/color_white"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/txtChange"
            android:layout_width="@dimen/dimen_70dp"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:text="@string/change"
            android:layout_marginStart="@dimen/dimen_4dp"
            android:textColor="@color/color_white" />
    </TableRow>
</RelativeLayout>
