<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/dimen_48dp"
    tools:context=".ui.asset_fragment.AssetFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/color_transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/my_asset" />

    <TextView
        android:id="@+id/labelCurrentBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/color_white"
        android:textSize="@dimen/dimen_16sp"
        android:layout_marginStart="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_40dp"
        android:text="@string/current_balance"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"/>

    <TextView
        android:id="@+id/txtCurrentBalance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        android:textSize="@dimen/dimen_16sp"
        android:textColor="@color/color_white"
        android:textAlignment="textEnd"
        android:layout_marginTop="@dimen/dimen_40dp"
        android:layout_marginStart="@dimen/dimen_10dp"
        android:layout_marginEnd="@dimen/dimen_20dp"
        android:ellipsize="marquee"
        android:singleLine="true"
        android:marqueeRepeatLimit="marquee_forever"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/labelCurrentBalance"/>
    <TextView
        android:id="@+id/labelWinLoss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/color_white"
        android:textSize="@dimen/dimen_16sp"
        android:layout_marginStart="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:text="@string/win_loss"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelCurrentBalance"/>

    <TextView
        android:id="@+id/txtWinLossNum"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        android:textSize="@dimen/dimen_16sp"
        android:textColor="@color/color_white"
        android:textAlignment="textEnd"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:layout_marginStart="@dimen/dimen_10dp"
        android:layout_marginEnd="@dimen/dimen_20dp"
        android:ellipsize="marquee"
        android:singleLine="true"
        android:marqueeRepeatLimit="marquee_forever"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintTop_toBottomOf="@id/labelCurrentBalance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/labelCurrentBalance"/>
    <TextView
        android:id="@+id/txtWinLossPercent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        android:textSize="@dimen/dimen_16sp"
        android:textColor="@color/color_white"
        android:textAlignment="textEnd"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginStart="@dimen/dimen_10dp"
        android:layout_marginEnd="@dimen/dimen_20dp"
        android:ellipsize="marquee"
        android:singleLine="true"
        android:marqueeRepeatLimit="marquee_forever"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintTop_toBottomOf="@id/txtWinLossNum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/labelCurrentBalance"/>
    <TextView
        android:id="@+id/labelMyWallet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/color_white"
        android:textSize="@dimen/dimen_16sp"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/dimen_30dp"
        android:text="@string/my_wallet"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtWinLossPercent"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerviewAssets"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dimen_8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelMyWallet" />

</androidx.constraintlayout.widget.ConstraintLayout>
